--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -1,4 +1,4 @@
-// color vars
+// // color vars
 
 $royal-blue: #2405F2;
 $dark-blue: #282938;
@@ -7,84 +7,6 @@ $yellow: #FCD980;
 $tint-blue: #1C1E53;
 $accent: #EEF4FA;
 $light-yellow: rgba(252, 217, 128, 0.1);
-
-// norm
-
-*, *::before, *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background-color: #fff;
-    font-family: 'Poppins', 'Manrope', sans-serif;
-    color: $dark-blue;
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-.container {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-a, button {
-    transition: all .2s ease;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-// general custom styles
-
-h1 {
-    font-weight: 600;
-    font-size: 54px;
-    line-height: 74px;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 64px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: 38px;
-    line-height: 56px;
-}
-
-h4 {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 56px;
-}
-
-h5 {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 48px;
-}
-
-h6 {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-}
 
 header {
     position: fixed;
@@ -144,45 +66,7 @@ header {
     }
 }
 
-.arrow_btn {
-    display: block;
-    position: relative;
-    font-weight: 500;
-    line-height: 28px;
-    color: white;
-    &::before {
-        content: '';
-        position: absolute;
-        top: 13px;
-        right: -41px;
-        width: 24px;
-        border-top: 2px solid #F4F6FC;
-        transition: all .2s ease;
-    }
-    &:after {
-        content: '';
-        height: 7px;
-        width: 7px;
-        transform: rotate(-135deg);
-        position: absolute;
-        top: 11px;
-        right: -41px;
-        border-bottom: 2px solid #F4F6FC;
-        border-left: 2px solid #F4F6FC;
-        transition: all .2s ease;
-    }
-    &:hover {
-        color: $yellow;
-    }
-    &:hover::before,
-    &:hover::after {
-        border-color: $yellow;
-        transform: translateX(30px);
-    }
-    &:hover::after {
-        transform: translateX(30px) rotate(-135deg);
-    }
-}
+
 
 // burger
 
