--- a/src/assets/css/norm.scss
+++ b/src/assets/css/norm.scss
@@ -84,3 +84,46 @@ h6 {
     font-size: 24px;
     line-height: 36px;
 }
+
+// buttons
+
+.arrow_btn {
+    display: block;
+    position: relative;
+    font-weight: 500;
+    line-height: 28px;
+    color: white;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 13px;
+        right: -41px;
+        width: 24px;
+        border-top: 2px solid #F4F6FC;
+        transition: all .2s ease;
+    }
+    &:after {
+        content: '';
+        height: 7px;
+        width: 7px;
+        transform: rotate(-135deg);
+        position: absolute;
+        top: 11px;
+        right: -41px;
+        border-bottom: 2px solid #F4F6FC;
+        border-left: 2px solid #F4F6FC;
+        transition: all .2s ease;
+    }
+    &:hover {
+        color: $yellow;
+    }
+    &:hover::before,
+    &:hover::after {
+        border-color: $yellow;
+        transform: translateX(30px);
+    }
+    &:hover::after {
+        transform: translateX(30px) rotate(-135deg);
+    }
+}
+
