--- a/src/assets/css/pages/index.scss
+++ b/src/assets/css/pages/index.scss
@@ -1,11 +1,5 @@
 
-$royal-blue: #2405F2;
-$dark-blue: #282938;
-$grey: #F4F6FC;
-$yellow: #FCD980;
-$tint-blue: #1C1E53;
-$accent: #EEF4FA;
-$light-yellow: rgba(252, 217, 128, 0.1);
+@import '@/assets/css/vars.scss';
 
 // how we work
 
@@ -199,50 +193,6 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     opacity: 1;
 }
 
-// features
-
-.features {
-    background-color: $grey;
-    padding: 120px 0 128px;
-}
-
-.features_text {
-    padding: 0 310px;
-    h6 {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 28px;
-        text-align: center;
-        margin-bottom: 12px;
-    }
-    h2 {
-        text-align: center;
-        margin-bottom: 47px;
-    }
-}
-
-.features_grid {
-    display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr 1fr;
-    gap: 23px 32px;
-    .features_card {
-        background-color: #fff;
-        padding-top: 48px;
-        padding-left: 48px;
-        padding-bottom: 48px;
-        padding-right: 32px;
-        img {
-            padding-bottom: 25px;
-        }
-        h6 {
-            padding-bottom: 12px;
-        }
-        p {
-            line-height: 28px;
-            color: rgba(40, 41, 56, 0.7)
-        }
-    }
-}
 
 // our clients' opinion
 
@@ -386,6 +336,10 @@ $light-yellow: rgba(252, 217, 128, 0.1);
         text-align: center;
         color: $royal-blue;
         opacity: 0.8;
+        transition: all .2s ease-out;
+        &:hover {
+            color: #000;
+        }
     }
 }
 
@@ -423,13 +377,15 @@ $light-yellow: rgba(252, 217, 128, 0.1);
 // contact form
 
 .contact {
-    background-color: #1C1E53;
     display: flex;
     margin-bottom: 128px;
 }
 
 .form_bg {
-    background: linear-gradient(180deg, rgba(28, 30, 83, 0.5), rgba(28, 30, 83, 0.5)), require('assets/images/home/contact/form_bg.jpg');
+    background: linear-gradient(180deg, rgba(28, 30, 83, 0.5), rgba(28, 30, 83, 0.5)), url(@/assets/images/home/contact/form_bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 50%;
     padding: 96px 96px 0 96px;
     h2 {
@@ -447,6 +403,7 @@ $light-yellow: rgba(252, 217, 128, 0.1);
 }
 
 .form_input {
+    background-color: #1C1E53;
     width: 50%;   
 }
 
@@ -468,7 +425,7 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     input {
         padding: 18px 0 18px 32px;
         background-color: transparent;
@@ -485,7 +442,19 @@ $light-yellow: rgba(252, 217, 128, 0.1);
         }
     }
     .round_btn {
+        display: block;
         cursor: pointer;
+        background-color: #FCD980;
+        border-radius: 41px;
+        padding: 16px 56px;
+        font-family: 'Manrope';
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 32px;
+        color: #1B1C2B;
+        &:hover {
+            background-color: #FDE4A6;
+        }
     }
 }
 
@@ -501,65 +470,6 @@ $light-yellow: rgba(252, 217, 128, 0.1);
 
 // blog
 
-.our_blog {
-    margin-bottom: 128px;
-    h2 {
-        margin-bottom: 64px;
-    }
-}
-
-.blog_card_wrap {
-    display: flex;
-    gap: 32px;
-}
-
-.blog_card {
-    .blog_card_img {
-        margin-bottom: 40px;
-        img {
-            width: 100%;
-            height: 100%;
-            vertical-align: top;
-        }
-    }
-    h6 {
-        font-size: 16px;
-        line-height: 28px;
-        color: $dark-blue;
-        opacity: 0.7;
-        margin-bottom: 16px;
-    }
-    h5 {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-        color: #282938;
-        margin-bottom: 16px;
-    }
-    p {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 28px;
-        color: #282938;
-        opacity: 0.7;
-        margin-bottom: 32px;
-    }
-    .arrow_btn {
-        display: inline-block;
-        color: $dark-blue;
-        &:before, &:after {
-            border-color: $dark-blue;
-        }
-        &:hover::before,
-        &:hover::after {
-            transform: translateX(30px);
-        }
-        &:hover::after {
-            transform: translateX(30px) rotate(-135deg);
-        }
-    }
-}
-
 // footer 
 
 // responsive for index 
@@ -572,15 +482,7 @@ $light-yellow: rgba(252, 217, 128, 0.1);
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    .features {
-        padding: 60px 0 64px;
-    }
-    .features_text {
-        padding: 0px 150px;
-    }
-    .features_grid {
-        grid-template: 1fr 1fr 1fr / 1fr 1fr;
-    }
+    
     .form_bg {
         padding: 40px 40px;
     }
@@ -593,9 +495,6 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     .we_work .container {
         padding: 64px 0;
         grid-template-columns: none;
-    }
-    .features_text {
-        padding: 0px 75px;
     }
     .clients {
         padding: 55px 0;
@@ -622,14 +521,6 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     .form_input {
         width: 100%;
     }
-    .blog_card_wrap {
-        flex-wrap: wrap;
-        .blog_card {
-            width: 45%;
-            justify-content: center;
-            align-items: center;
-        }
-    }
 }
 
 @media screen and (max-width: 800px) {
@@ -642,9 +533,6 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     .our_projects_text {
         flex-wrap: wrap;
         gap: 15px;
-    }
-    .features_grid {
-        grid-template: 1fr 1fr 1fr 1fr / 1fr;
     }
 } 
 
@@ -661,19 +549,4 @@ $light-yellow: rgba(252, 217, 128, 0.1);
     .our_projects_grid {
         grid-template-columns: none;
     }
-    .features_text {
-        padding: 0px;
-    }
 }
-
-@media screen and (max-width: 500px) {
-    .blog_card_wrap .blog_card {
-        width: 100%;
-    }
-}
-
-
-
-
-
-
