features view finalized

--- a/src/assets/css/pages/features.scss
+++ b/src/assets/css/pages/features.scss
@@ -1,152 +1,7 @@
-@use '../header';
-@use '../footer';
-
-// color vars
-
-$royal-blue: #2405F2;
-$dark-blue: #282938;
-$grey: #F4F6FC;
-$yellow: #FCD980;
-$tint-blue: #1C1E53;
-$accent: #EEF4FA;
-$light-yellow: rgba(252, 217, 128, 0.1);
-
-*, *::before, *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background-color: #fff;
-    font-family: 'Poppins', 'Manrope', sans-serif;
-    color: $dark-blue;
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-.container {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-a, button {
-    transition: all .2s ease;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-p {
-    opacity: 0.7;
-    line-height: 28px;
-}
-
-// general custom styles
-
-h1 {
-    font-weight: 600;
-    font-size: 54px;
-    line-height: 74px;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 64px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: 38px;
-    line-height: 56px;
-}
-
-h4 {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 56px;
-}
-
-h5 {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 48px;
-}
-
-h6 {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-}
-
-// header
-// imported
-
-// main
-// hero section 
-.hero_section {
-    background-color: $tint-blue;
-    .container {
-        display: flex;
-        justify-content: space-between;
-        gap: 100px;
-        padding: 197px 0 128px;
-    }
-}
-
-.hero_text {
-    padding-top: 60px;
-}
-
-.hero_text_body {
-    margin-bottom: 30px;
-    h1 {
-        color: white;
-        margin-bottom: 34px;
-    }
-    p {
-        font-weight: 500;
-        line-height: 28px;
-        color: rgba($color: #fff, $alpha: 0.7);
-    }
-}
-
-.round_btn {
-    display: inline-block;
-    background-color: #FCD980;
-    border-radius: 41px;
-    padding: 16px 56px;
-    font-family: 'Manrope';
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 32px;
-    color: #1B1C2B;
-    &:hover {
-        background-color: #FDE4A6;
-    }
-}
-
-.hero_img {
-    padding: 23px 18px 0px 0px;
-}
-
 // benefits
 // reused from the about_us
 
-.benefits {
+.features {
     padding: 84px 0;
     h2 {
         text-align: center;
@@ -156,14 +11,14 @@ h6 {
     }
 }
 
-.benefits_users {
+.features_users {
     display: flex;
     gap: 89px;
     align-items: center;
     margin-bottom: 96px;
 }
 
-.benefits_users_numbers h5 {
+.features_users_numbers h5 {
     font-weight: 400;
     font-size: 16px;
     line-height: 28px;
@@ -171,7 +26,7 @@ h6 {
     opacity: 0.7;
 }
 
-.benefits_users_logos {
+.features_users_logos {
     display: flex;
     gap: 70px;
     img {
@@ -184,12 +39,12 @@ h6 {
     }
 }
 
-.benefits_grid {
+.features_grid {
     display: grid;
     grid-template: 1fr / 1fr 1fr 1fr;
     gap: 32px;
     margin-bottom: 48px;
-    .benefits_card {
+    .features_card {
         background-color: $grey;
         padding: 48px 32px 42px 48px;
         img {
@@ -205,23 +60,23 @@ h6 {
     }
 }
 
-// our approach
+// our mission
 
 
-.our_approach {
+.our_mission {
     padding: 128px 0;
 }
 
-.our_approach_no_ptop {
+.our_mission_no_ptop {
     padding-bottom: 128px;
 }
 
-.our_approach_flex {
+.our_mission_flex {
     display: flex;
     gap: 70px;
 }
 
-.our_approach_descr {
+.our_mission_descr {
     padding-top: 40px;
     h4 {
         font-size: 18px;
@@ -234,7 +89,7 @@ h6 {
     }
 }
 
-.our_approach_img { 
+.our_mission_img { 
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -244,11 +99,11 @@ h6 {
     }
 }
 
-.our_approach_grey {
+.our_mission_grey {
     background-color: $grey;
 }
 
-.our_approach_yellow {
+.our_mission_yellow {
     background-color: $light-yellow;
 }
 
@@ -316,20 +171,16 @@ h6 {
 
 // responsive 
 
-@media screen and (max-width: 1200px) {
-    .benefits_users {
-        flex-direction: column;
-    }
-}
+
 
 @media screen and (max-width: 1100px) {
-    .benefits_grid {
+    .features_grid {
         grid-template: 1fr / 1fr 1fr;
     }
-    .our_approach {
+    .our_mission {
         padding: 64px 0;
     }
-    .our_approach_flex {
+    .our_mission_flex {
         flex-wrap: wrap;
         gap: 30px;
     }
@@ -342,15 +193,8 @@ h6 {
     .hero_img {
         display: none;
     }
-    .benefits {
+    .features {
         padding: 64px 0;
-    }
-    .benefits_users {
-        gap: 60px;
-    }
-    .benefits_users_logos {
-        flex-wrap: wrap;
-        gap: 25px;
     }
     .faqs {
         padding: 60px 0;
@@ -362,13 +206,13 @@ h6 {
 }
 
 @media screen and (max-width: 800px) {
-    .benefits h2 {
+    .features h2 {
         width: 100%;
     }
-    .benefits_grid {
+    .features_grid {
         grid-template: 1fr 1fr / 1fr;
     }
-    .our_approach .container {
+    .our_mission .container {
         padding: 64px 0;
     }
 }
