--- a/src/assets/css/pages/index.scss
+++ b/src/assets/css/pages/index.scss
@@ -1,7 +1,7 @@
 
 @import '@/assets/css/vars.scss';
 
-// how we work
+// we work
 
 .we_work {
     background-color: $grey;
@@ -47,18 +47,6 @@
     display: grid;
     grid-template: 1fr 1fr / 40% 1fr;
     gap: 43px 37px;
-    .we_work_card {
-        img {
-            margin-bottom: 10px;
-        }
-        h5 {
-            margin-bottom: 11px;
-        }
-        p {
-            line-height: 28px;
-            color: rgba(40, 41, 56, .7);
-        }
-    }
 }
 
 // our projects
