--- a/src/assets/css/pages/blogs.scss
+++ b/src/assets/css/pages/blogs.scss
@@ -142,7 +142,7 @@ h6 {
         margin: 0 auto;
         color: $royal-blue;
         &:hover {
-            transform: scale(1.1);
+            color: #000;
         }
     }
 }
@@ -150,7 +150,7 @@ h6 {
 // our blog list 
 
 .our_blog {
-    margin-bottom: 128px;
+    padding: 220px 0 128px;
     h2 {
         margin-bottom: 45px;
         text-align: center;
@@ -165,11 +165,16 @@ h6 {
 
 .blog_card {
     .blog_card_img {
-        margin-bottom: 40px;
+        position: relative;
+        padding-top: 53%;
+        margin-bottom: 24px;
         img {
             width: 100%;
             height: 100%;
-            vertical-align: top;
+            object-fit: cover;
+            position: absolute;
+            left: 0;
+            top: 0;
         }
     }
     h6 {
@@ -197,9 +202,6 @@ h6 {
     .arrow_btn {
         display: inline-block;
         color: $dark-blue;
-        &:hover {
-            transform: scale(1.1);
-        }
         &:before, &:after {
             border-color: $dark-blue;
         }
