blog card comp updated for home page view

--- a/src/assets/css/pages/blogs.scss
+++ b/src/assets/css/pages/blogs.scss
@@ -1,100 +1,4 @@
-@use '../header';
-@use '../footer';
-
-// color vars
-
-$royal-blue: #2405F2;
-$dark-blue: #282938;
-$grey: #F4F6FC;
-$yellow: #FCD980;
-$tint-blue: #1C1E53;
-$accent: #EEF4FA;
-$light-yellow: rgba(252, 217, 128, 0.1);
-
-*, *::before, *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background-color: #fff;
-    font-family: 'Poppins', 'Manrope', sans-serif;
-    color: $dark-blue;
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-.container {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-a, button {
-    transition: all .2s ease;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-p {
-    opacity: 0.7;
-    line-height: 28px;
-}
-
-// general custom styles
-
-h1 {
-    font-weight: 600;
-    font-size: 54px;
-    line-height: 74px;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 64px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: 38px;
-    line-height: 56px;
-}
-
-h4 {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 56px;
-}
-
-h5 {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 48px;
-}
-
-h6 {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-}
-
-// header
-// imported
-
+@import '@/assets/css/vars.scss';
 
 // main 
 // blog home 
