--- a/src/assets/css/pages/index.scss
+++ b/src/assets/css/pages/index.scss
@@ -236,96 +236,38 @@
     min-width: 0;
     flex-basis: 115%;
     position: relative;
-    .slick-prev {
-        position: absolute;
-        z-index: 10;
-        height: 48px;
-        width: 48px;
-        top: auto;
-        left: auto;
-        bottom: -28px;
-        right: 57px;
-        &::before {
-            content: require('assets/images/home/clients/prev_arrow.svg');
-            opacity: 1;
-            width: 48px;
-            height: 48px;
-        }
-        &:hover::before {
-            content: require('assets/images/home/clients/prev_arrow_hover.svg');
-        }
-        &:hover::after {
-            content: '';
-            position: absolute;
-            z-index: -5;
-            top: 0;
-            left: 0;
-            width: 48px;
-            height: 48px;
-            background-color: #5239FA;
-            border-radius: 50%;
-        }
-    }
-    .slick-next {
-        position: absolute;
-        z-index: 10;
-        height: 48px;
-        width: 48px;
-        top: auto;
-        left: auto;
-        bottom: -28px;
-        right: 0;
-        &::before {
-            content: require('assets/images/home/clients/next_arrow.svg');
-            opacity: 1;
-            width: 48px;
-            height: 48px;
-            position: absolute;
-            top: 28%;
-            left: 4%;
-        }
-        &:hover::before {
-            content: require('assets/images/home/clients/next_arrow_hover.svg');
-        }
-        &:hover::after {
-            content: '';
-            position: absolute;
-            z-index: -5;
-            top: 0;
-            left: 0;
-            width: 48px;
-            height: 48px;
-            background-color: #5239FA;
-            border-radius: 50%;
-        }
-    }
 }
 
-.slide {
+.carousel__slide {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     .clients_quote {
+        text-align: left;
         margin-bottom: 48px;
     }
-}
-
-.slide_author {
-    display: flex;
-    gap: 16px;
-    .slide_author_descr {
-        h5 {
-            font-weight: 500;
-            font-size: 18px;
-            line-height: 32px;
-            color: $dark-blue;
-        }
-        h6 {
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 18px;
-            color: $dark-blue;
+    .slide_author {
+        display: flex;
+        gap: 16px;
+        .slide_author_descr {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            h5 {
+                font-weight: 500;
+                font-size: 18px;
+                line-height: 32px;
+                color: $dark-blue;
+            }
+            h6 {
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 18px;
+                color: $dark-blue;
+            }
         }
     }
 }
-
 
 // contact form
 
@@ -420,10 +362,6 @@
         line-height: 32px;
     }
 }
-
-// blog
-
-// footer 
 
 // responsive for index 
 
