--- a/src/assets/css/pages/works.scss
+++ b/src/assets/css/pages/works.scss
@@ -1,101 +1,4 @@
-@use '../header';
-@use '../footer';
-
-// color vars
-
-$royal-blue: #2405F2;
-$dark-blue: #282938;
-$grey: #F4F6FC;
-$yellow: #FCD980;
-$tint-blue: #1C1E53;
-$accent: #EEF4FA;
-$light-yellow: rgba(252, 217, 128, 0.1);
-
-*, *::before, *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background-color: #fff;
-    font-family: 'Poppins', 'Manrope', sans-serif;
-    color: $dark-blue;
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-.container {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-a, button {
-    transition: all .2s ease;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-p {
-    opacity: 0.7;
-    line-height: 28px;
-}
-
-// general custom styles
-
-h1 {
-    font-weight: 600;
-    font-size: 54px;
-    line-height: 74px;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 64px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: 38px;
-    line-height: 56px;
-}
-
-h4 {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 56px;
-}
-
-h5 {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 48px;
-}
-
-h6 {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-}
-
-// header
-// imported
-
-
+@import '@/assets/css/vars.scss';
 // main
 // home section 
 
@@ -124,9 +27,15 @@ h6 {
     }
 }
 
-.works_sm_list li:hover {
-    color: inherit;
-    transform: scale(1.1);
+.sm_list {
+    display: flex;
+    gap: 27px;
+    li:hover {
+        color: $royal-blue;
+    }
+    i {
+        font-size: 20px;
+    }
 }
 
 // templates
@@ -163,38 +72,6 @@ h6 {
     gap: 60px 34px;
 }
 
-.templates_card {
-    h3 {
-        margin-bottom: 14px;
-    }
-    p {
-        margin-bottom: 22px;
-    }
-    .arrow_btn {
-        display: inline-block;
-        color: $dark-blue;
-        &:before, &::after {
-            border-color: $dark-blue;
-        }
-        &:hover {
-            transform: scale(1.1);
-        }
-    }
-}
-
-.templates_card_img {
-    margin-bottom: 18px;
-    a {
-        display: block;
-        width: 100%;
-        height: 100%;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
 
 // build together
 
