--- a/src/assets/css/pages/works.scss
+++ b/src/assets/css/pages/works.scss
@@ -54,6 +54,7 @@
     gap: 20px;
     margin-bottom: 48px;
     li a {
+        cursor: pointer;
         font-size: 18px;
         line-height: 32px;
         color: rgba(40, 41, 56, .7);
@@ -68,7 +69,7 @@
 
 .templates_grid {
     display: grid;
-    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    grid-template: repeat( auto-fit, minmax(250px, 1fr)) / 1fr 1fr;
     gap: 60px 34px;
 }
 
@@ -139,7 +140,7 @@
         flex-wrap: wrap;
     }
     .templates_grid {
-        grid-template: 1fr 1fr 1fr 1fr / 1fr;
+        grid-template: repeat( auto-fit, minmax(250px, 1fr)) / 1fr;
         gap: 30px;
     }
 }
