--- a/src/assets/css/pages/blogs.scss
+++ b/src/assets/css/pages/blogs.scss
@@ -4,7 +4,7 @@
 // blog home 
 
 .blog_home {
-    padding: 220px 0 128px;
+    padding-top: 220px;
 }
 
 .blog_home_main_text {
@@ -24,10 +24,10 @@
 }
 
 .blog_home_img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
+    margin: 0 auto 45px;
     object-fit: cover;
-    margin-bottom: 45px;
     img {
         width: 100%;
         height: 100%;
@@ -54,7 +54,7 @@
 // our blog list 
 
 .our_blog {
-    padding: 220px 0 128px;
+    padding: 128px 0;
     h2 {
         margin-bottom: 45px;
         text-align: center;
