--- a/src/assets/css/pages/index.scss
+++ b/src/assets/css/pages/index.scss
@@ -279,6 +279,7 @@
     input {
         padding: 18px 0 18px 32px;
         background-color: transparent;
+        height: 64px;
         width: 100%;
         outline: none;
         font-family: 'Poppins';
