--- a/src/assets/css/pages/features.scss
+++ b/src/assets/css/pages/features.scss
@@ -1,4 +1,3 @@
-// benefits
 
 @import '@/assets/css/vars.scss';
 
@@ -61,23 +60,22 @@
     }
 }
 
-// our mission
+// our approach
 
-
-.our_mission {
+.our_approach {
     padding: 128px 0;
 }
 
-.our_mission_no_ptop {
+.our_approach_no_ptop {
     padding-bottom: 128px;
 }
 
-.our_mission_flex {
+.our_approach_flex {
     display: flex;
     gap: 70px;
 }
 
-.our_mission_descr {
+.our_approach_descr {
     padding-top: 40px;
     h4 {
         font-size: 18px;
@@ -90,7 +88,7 @@
     }
 }
 
-.our_mission_img { 
+.our_approach_img { 
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -100,72 +98,14 @@
     }
 }
 
-.our_mission_grey {
+.our_approach_grey {
     background-color: $grey;
 }
 
-.our_mission_yellow {
+.our_approach_yellow {
     background-color: $light-yellow;
 }
 
-// faqs
-// taken from index.html
-
-.faqs {
-    padding: 128px 0;
-}
-
-.faqs_flex {
-    display: flex;
-    gap: 95px;
-}
-
-.faqs_descr {
-    h3 {
-        color: $dark-blue;
-        margin-bottom: 16px;
-    }
-    a {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 32px;
-        text-align: center;
-        color: $royal-blue;
-        opacity: 0.8;
-    }
-}
-
-.faqs_number {
-    margin-right: 56px;
-}
-
-.faqs_text {
-    padding-left: 59px;
-}
-
-.faqs_accord {
-
-    .faqs_heading {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-        color: $dark-blue;
-    }
-    .faqs_number {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-        color: $royal-blue;
-    }
-    p {
-        padding-left: 63px;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 32px;
-        color: $dark-blue;
-        opacity: 0.8;
-    }
-}
 
 // responsive 
 
@@ -173,10 +113,10 @@
     .features_grid {
         grid-template: 1fr / 1fr 1fr;
     }
-    .our_mission {
+    .our_approach {
         padding: 64px 0;
     }
-    .our_mission_flex {
+    .our_approach_flex {
         flex-wrap: wrap;
         gap: 30px;
     }
@@ -192,13 +132,6 @@
     .features {
         padding: 64px 0;
     }
-    .faqs {
-        padding: 60px 0;
-    }
-    .faqs_flex {
-        flex-wrap: wrap;
-        gap: 45px;
-    }
 }
 
 @media screen and (max-width: 800px) {
@@ -208,7 +141,7 @@
     .features_grid {
         grid-template: 1fr 1fr / 1fr;
     }
-    .our_mission .container {
+    .our_approach .container {
         padding: 64px 0;
     }
 }
