--- a/src/assets/css/pages/blog_page.scss
+++ b/src/assets/css/pages/blog_page.scss
@@ -1,102 +1,105 @@
 @import '@/assets/css/vars.scss';
 
 .text_container {
-    width: 90%;
-    max-width: 842px;
-    margin: 0 auto;
+	width: 90%;
+	max-width: 842px;
+	margin: 0 auto;
 }
 
 // main 
 // blog home
 
 .blog_home {
-    padding: 220px 0 18px;
+	padding: 220px 0 18px;
 }
 
 .blog_home_main_text {
-    h2 {
-        text-align: center;
-        padding: 0 155px;
-        margin-bottom: 15px;
-    }
-    p {
-        text-align: center;
-        opacity: 1;
-        margin-bottom: 32px;
-        .blog_home_author_name {
-            margin-right: 15px;
-        }
-    }
+	h2 {
+		text-align: center;
+		padding: 0 155px;
+		margin-bottom: 15px;
+	}
+	p {
+		text-align: center;
+		opacity: 1;
+		margin-bottom: 32px;
+		.blog_home_author_name {
+			margin-right: 15px;
+		}
+	}
 }
 
 .blog_home_img {
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-    margin: 0 auto 45px;
-    img {
-        width: 100%;
-        height: 100%;
-    }
+	width: 100%;
+	height: 100%;
+	margin: 0 auto 45px;
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
 
 // blog_text
+
 .blog_text {
-    h3, p, ul, div {
-        margin-bottom: 32px;
-    }
-    ul {
-        list-style: disc;
-        padding-left: 32px;
-        li {
-            margin-bottom: 12px;
-            &:last-of-type {
-                margin-bottom: 0px;
-            }
-        }
-    }
+	h3, p, ul, div {
+		margin-bottom: 32px;
+	}
+	ul {
+		list-style: disc;
+		padding-left: 32px;
+		li {
+			margin-bottom: 12px;
+			&:last-of-type {
+				margin-bottom: 0px;
+			}
+		}
+	}
 }
 
-
 .blog_text_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    img {
-        width: 100%;
-        height: 100%;
-    }
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	img {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .round_btn {
-    display: block;
-    width: 40%;
-    margin: 0 auto;
-    background-color: #FCD980;
-    border-radius: 41px;
-    padding: 16px 56px;
-    font-family: 'Manrope';
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 32px;
-    text-align: center;
-    color: #1B1C2B;
-    margin-bottom: 64px;
-    &:hover {
-        background-color: #FDE4A6;
-    }
+	display: block;
+	width: 40%;
+	margin: 0 auto;
+	background-color: #FCD980;
+	border-radius: 41px;
+	padding: 16px 56px;
+	font-family: 'Manrope';
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 32px;
+	text-align: center;
+	color: #1B1C2B;
+	margin-bottom: 64px;
+	&:hover {
+		background-color: #FDE4A6;
+	}
 }
-
-// footer
-// imported
 
 // responsive
 
 @media screen and (max-width: 1200px) {
-    .blog_home {
-        padding: 120px 0px 0px;
-    }
-    .blog_home_main_text h2 {
-        padding: 0px ;
-    }
+	.blog_home {
+		padding: 120px 0px 0px;
+	}
+	.blog_home_main_text h2 {
+		padding: 0px ;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.round_btn {
+		width: 100%;
+	}
 }
