--- a/src/assets/css/pages/blogs.scss
+++ b/src/assets/css/pages/blogs.scss
@@ -4,160 +4,167 @@
 // blog home 
 
 .blog_home {
-    padding-top: 220px;
+	padding-top: 220px;
 }
 
 .blog_home_main_text {
-    h2 {
-        text-align: center;
-        padding: 0 155px;
-        margin-bottom: 15px;
-    }
-    p {
-        text-align: center;
-        opacity: 1;
-        margin-bottom: 32px;
-        .blog_home_author_name {
-            margin-right: 15px;
-        }
-    }
+	h2 {
+		text-align: center;
+		padding: 0 155px;
+		margin-bottom: 15px;
+	}
+	p {
+		text-align: center;
+		opacity: 1;
+		margin-bottom: 32px;
+		.blog_home_author_name {
+			margin-right: 15px;
+		}
+	}
 }
 
 .blog_home_img {
-    width: 50%;
-    height: 50%;
-    margin: 0 auto 45px;
-    object-fit: cover;
-    img {
-        width: 100%;
-        height: 100%;
-    }
+	width: 50%;
+	height: 50%;
+	margin: 0 auto 45px;
+	object-fit: cover;
+	img {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .blog_home_descr {
-    p {
-        padding: 0 220px;
-        text-align: center;
-        margin-bottom: 16px;
-    }
-    a {
-        display: block;
-        width: 10%;
-        margin: 0 auto;
-        color: $royal-blue;
-        &:hover {
-            color: #000;
-        }
-    }
+	p {
+		padding: 0 220px;
+		text-align: center;
+		margin-bottom: 16px;
+	}
+	a {
+		display: block;
+		width: 10%;
+		margin: 0 auto;
+		color: $royal-blue;
+		&:hover {
+			color: #000;
+		}
+	}
 }
 
 // our blog list 
 
 .our_blog {
-    padding: 128px 0;
-    h2 {
-        margin-bottom: 45px;
-        text-align: center;
-    }
+	padding: 128px 0;
+	h2 {
+		margin-bottom: 45px;
+		text-align: center;
+	}
 }
 
 .blog_card_wrap {
-    display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr 1fr;
-    gap: 32px;
-    margin-bottom: 48px;
+	display: grid;
+	grid-template: 1fr 1fr / 1fr 1fr 1fr;
+	gap: 32px;
+	margin-bottom: 48px;
 }
 
 .blog_card {
-    .blog_card_img {
-        position: relative;
-        padding-top: 53%;
-        margin-bottom: 24px;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
-    }
-    h6 {
-        font-size: 16px;
-        line-height: 28px;
-        color: $dark-blue;
-        opacity: 0.7;
-        margin-bottom: 16px;
-    }
-    h5 {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 36px;
-        color: #282938;
-        margin-bottom: 16px;
-    }
-    p {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 28px;
-        color: #282938;
-        opacity: 0.7;
-        margin-bottom: 32px;
-    }
-    .arrow_btn {
-        display: inline-block;
-        color: $dark-blue;
-        &:before, &:after {
-            border-color: $dark-blue;
-        }
-    }
+	width: 100%;
+	.blog_card_img {
+		position: relative;
+		padding-top: 53%;
+		margin-bottom: 24px;
+		width: 100%;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+	}
+	h6 {
+		font-size: 16px;
+		line-height: 28px;
+		color: $dark-blue;
+		opacity: 0.7;
+		margin-bottom: 16px;
+	}
+	h5 {
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 36px;
+		color: #282938;
+		margin-bottom: 16px;
+	}
+	p {
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 28px;
+		color: #282938;
+		text-align: justify;
+		opacity: 0.7;
+		margin-bottom: 32px;
+	}
+	.arrow_btn {
+		display: inline-block;
+		color: $dark-blue;
+		&:before, &:after {
+			border-color: $dark-blue;
+		}
+	}
 }
-
-// footer
-// imported
 
 // responsive 
 
 @media screen and (max-width: 1200px) {
-    .blog_home {
-        padding: 120px 0px 0px;
-    }
-    .blog_home_main_text h2 {
-        padding: 0px ;
-    }
-    .blog_home_descr {
-        p {
-            padding: 0px ;
-        }
-        a {
-            width: 40%;
-            text-align: center;
-        }
-    }
+	.blog_home {
+		padding: 120px 0px 0px;
+	}
+	.blog_home_main_text h2 {
+		padding: 0px ;
+	}
+	.blog_home_descr {
+		p {
+			padding: 0px ;
+		}
+		a {
+			width: 40%;
+			text-align: center;
+		}
+	}
 }
 
 @media screen and (max-width: 1000px) {
-    .blog_card_wrap {
-        grid-template: 1fr 1fr 1fr / 1fr 1fr;
-        .blog_card {
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-        }
-    }
+	.our_blog {
+		padding: 64px 0;
+	}
+	.blog_card_wrap {
+		grid-template: 1fr / 1fr 1fr;
+		.blog_card {
+			width: 100%;
+			justify-content: center;
+			align-items: center;
+		}
+	}
 }
 
 @media screen and (max-width: 800px) {
-    .our_blog {
-        margin-bottom: 64px;
-    }
+	.our_blog {
+		margin-bottom: 64px;
+	}
+	.blog_home_img {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 @media screen and (max-width: 500px) {
-    .blog_card_wrap {
-        grid-template: 1fr 1fr 1fr 1fr / 1fr;
-    }
-    .blog_card_wrap .blog_card {
-        width: 100%;
-    }
+	.blog_card_wrap {
+		grid-template: 1fr / 1fr;
+		.blog_card {
+			width: 100%;
+		}
+	}
 }
