--- a/src/assets/css/norm.scss
+++ b/src/assets/css/norm.scss
@@ -1,13 +1,7 @@
 // color vars
 
-$royal-blue: #2405F2;
-$dark-blue: #282938;
-$grey: #F4F6FC;
-$yellow: #FCD980;
-$tint-blue: #1C1E53;
-$accent: #EEF4FA;
-$light-yellow: rgba(252, 217, 128, 0.1);
 
+@import '@/assets/css/vars.scss';
 
 *, *::before, *::after {
 	padding: 0;
