--- a/src/assets/css/pages/about_us.scss
+++ b/src/assets/css/pages/about_us.scss
@@ -3,158 +3,176 @@
 // about us
 
 .about_us_home {
-    padding: 220px 0 105px;
+	padding: 220px 0 105px;
 }
 
 // who we are
 
 .who_we_are .container {
-    background-color: #F4F5F5;
+	background-color: #F4F5F5;
 }
 
 // our process
 
 .our_process {
-    padding: 128px 0;
-    h2 {
-        text-align: center;
-        margin-bottom: 48px;
-    }
+	padding: 128px 0;
+	h2 {
+		text-align: center;
+		margin-bottom: 48px;
+	}
 }
 .our_process_flex {
-display: flex;
-gap: 32px;
+	display: flex;
+	gap: 32px;
 }
 
 // our approach
 
 .our_approach {
-    background-color: #EEF4FA;
-    .container {
-        padding: 128px 0;
-    }
+	background-color: #EEF4FA;
+	.container {
+		padding: 128px 0;
+	}
 }
 
 // features
 .features {
-    padding: 128px 0;
-    h2 {
-        text-align: center;
-        width: 50%;
-        margin: 0 auto;
-        margin-bottom: 48px;
-    }
+	padding: 128px 0;
+	h2 {
+		text-align: center;
+		width: 50%;
+		margin: 0 auto;
+		margin-bottom: 48px;
+	}
 }
 
 .features_grid {
-    display: grid;
-    grid-template: 1fr / 1fr 1fr 1fr;
-    gap: 32px;
-    margin-bottom: 48px;
-    .features_card {
-        background-color: $grey;
-    }
+	display: grid;
+	grid-template: 1fr / 1fr 1fr 1fr;
+	gap: 32px;
+	margin-bottom: 48px;
+	.features_card {
+		background-color: $grey;
+	}
 }
 
 // our team
 
 .our_team {
-    background-color: $grey;
-    padding: 128px 0;
-    h2 {
-        text-align: center;
-        margin-bottom: 48px;
-    }
+	background-color: $grey;
+	padding: 128px 0;
+	h2 {
+		text-align: center;
+		margin-bottom: 48px;
+	}
 }
 
 .our_team_grid {
-    display: grid;
-    grid-template: 1fr / 1fr 1fr 1fr 1fr;
-    gap: 32px;
+	display: grid;
+	grid-template: 1fr / 1fr 1fr 1fr 1fr;
+	gap: 32px;
 }
 
 // responsive 
 
 @media screen and (max-width: 1400px) {
-    .our_team_grid {
-        grid-template: 1fr 1fr / 1fr 1fr;
-    }
-    .our_process_flex {
-        align-items: center;
-    }
+	.our_team_grid {
+		grid-template: 1fr 1fr / 1fr 1fr;
+	}
+	.our_process_flex {
+		align-items: center;
+	}
 }
 
 @media screen and (max-width: 1200px) {
-    .features_users {
-        flex-direction: column;
-    }
+	.features_users {
+		flex-direction: column;
+	}
 }
 
 @media screen and (max-width: 1100px) {
-    .our_approach_flex {
-        flex-wrap: wrap;
-        gap: 50px;
-    }
-    .features_grid {
-        grid-template: 1fr / 1fr 1fr;
-    }
+	.our_approach_flex {
+		flex-wrap: wrap;
+		gap: 50px;
+	}
+	.features_grid {
+		grid-template: 1fr / 1fr 1fr;
+	}
 }
 
 @media screen and (max-width: 1000px) {
-    .about_us_home_flex {
-        gap: 50px;
-    }
-    .about_us_home {
-        padding: 100px 0 50px;
-    }
-    .about_us_home_img {
-        margin: 0 auto;
-    }
-    .about_us_home_flex {
-        flex-wrap: wrap;
-    }
-    .our_process {
-        padding: 64px 0;
-    }
-    .our_process_flex {
-        justify-content: center;
-        gap: 30px;
-    }
-    .feature {
-        padding: 64px 0;
-    }
-    .features_users {
-        gap: 60px;
-    }
-    .features_users_logos {
-        flex-wrap: wrap;
-        gap: 25px;
-    }
+	.about_us_home_flex {
+		gap: 50px;
+	}
+	.about_us_home {
+		padding: 100px 0 50px;
+	}
+	.about_us_home_img {
+		margin: 0 auto;
+	}
+	.about_us_home_flex {
+		flex-wrap: wrap;
+	}
+	.our_process {
+		padding: 64px 0;
+	}
+	.our_process_flex {
+		justify-content: center;
+		gap: 30px;
+	}
+	.feature {
+		padding: 64px 0;
+	}
+	.features_users {
+		gap: 60px;
+	}
+	.features_users_logos {
+		flex-wrap: wrap;
+		gap: 25px;
+	}
+	.our_team {
+		padding: 64px 0;
+	}
 }
 
 @media screen and (max-width: 800px) {
-    .our_process h2 {
-        margin-bottom: 20px;
-    }
-    .our_approach .container {
-        padding: 64px 0;
-    }
-    .our_process_flex {
-        flex-wrap: wrap;
-    }
-    .features {
-        padding: 64px 0;
-    }
-    .features h2 {
-        width: 100%;
-    }
-    .features_grid {
-        grid-template: 1fr 1fr / 1fr;
-    }
+	.our_process h2 {
+		margin-bottom: 20px;
+	}
+	.our_approach .container {
+		padding: 64px 0;
+	}
+	.our_process_flex {
+		flex-wrap: wrap;
+	}
+	.features {
+		padding: 64px 0;
+	}
+	.features h2 {
+		width: 100%;
+	}
+	.features_grid {
+		grid-template: 1fr 1fr / 1fr;
+	}
 }
 
 @media screen and (max-width: 700px) {
-    .our_team_grid {
-        grid-template: 1fr 1fr 1fr / 1fr;
-    }
+	.our_process {
+		padding: 32px 0;
+	}
+	.our_approach .container {
+		padding: 32px 0;
+	}
+	.about_us_home {
+		padding: 100px 0 25px;
+	}
+	.our_approach_flex {
+		gap: 25px;
+	}
+	.our_team {
+		padding: 32px 0;
+	}
+	.our_team_grid {
+		grid-template: 1fr 1fr 1fr / 1fr;
+	}
 }
